--- a/assets/section-collection-list.css
+++ b/assets/section-collection-list.css
@@ -59,3 +59,12 @@
 .collection-list-view-all {
   margin-top: 2rem;
 }
+
+/* collection list test */
+.pos-bootom-learn {
+  position: absolute;
+  bottom: 30px;
+  margin-left: 30%;
+}
+
+/* end collection list test */
